Bugfix/broken layout (#11)
* fixed broken layout on mobile

--- a/src/scss/co-custom-theme/_icons.scss
+++ b/src/scss/co-custom-theme/_icons.scss
@@ -188,6 +188,10 @@
   &.burger-blue {
     @include square(24px);
     background-image: url('#{$icons-path}icons-outlined-navigation-menu.svg');
+    @media (max-width: 767px) {
+      @include square(15px);
+      margin-bottom: 4px;
+    }
   }
 
   &.menu {
